config/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: flask-rollout
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-flask-app
  template:
    metadata:
      labels:
        app: my-flask-app
    spec:
      containers:
      - name: flask-app
        image: myflask:v1.1   # <--- 改成你推到仓库的镜像repo:tag
        ports:
        - containerPort: 5000

  strategy:
    canary:
      stableService: flask-stable-svc
      canaryService: flask-canary-svc
      steps:
      - setWeight: 20
      - pause: { duration: 30 }
      - setWeight: 100
