config/ service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-stable-svc
spec:
  selector:
    app: my-flask-app
  ports:
  - port: 80
    targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask-canary-svc
spec:
  selector:
    app: my-flask-app
  ports:
  - port: 80
    targetPort: 5000
