config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-active-svc
  namespace: argo-bluegreen
spec:
  selector:
    app: my-flask-app
  ports:
  - port: 80
    targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask-preview-svc
  namespace: argo-bluegreen
spec:
  selector:
    app: my-flask-app
  ports:
  - port: 80
    targetPort: 5000
