config/demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-demo
---
apiVersion: v1
kind: Service
metadata:
  name: canary-demo
  namespace: canary-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: canary-demo
---
apiVersion: v1
kind: Service
metadata:
  name: canary-demo-preview
  namespace: canary-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: canary-demo
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
  namespace: canary-demo
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: canary-demo
  strategy:
    canary:
      canaryService: canary-demo-preview
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause:
          duration: 10
      - setWeight: 60
      - pause:
          duration: 10
      - setWeight: 80
      - pause:
          duration: 10
  template:
    metadata:
      labels:
        app: canary-demo
    spec:
      containers:
      - image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        name: canary-demo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 5m
            memory: 32Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo
  namespace: canary-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
  - host: canary.k8s.orb.local
    http:
      paths:
      - backend:
          service:
            name: canary-demo
            port:
              name: http
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-preview
  namespace: canary-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
  - host: canary-preview.k8s.orb.local
    http:
      paths:
      - backend:
          service:
            name: canary-demo-preview
            port:
              name: http
        path: /
        pathType: Prefix
